# tinkuy

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  e2e-testing.md  pre-registration-ablation-ladder.md
docs/superpowers/plans/: 2026-03-24-system-block-architecture.md  2026-03-25-cache-optimization-tools.md  2026-03-25-projection-first-gateway.md  2026-03-26-taste-native-gateway.md
docs/superpowers/specs/: 2026-03-25-message-suffix-invariant-design.md  2026-03-28-tensor-tool-callback-design.md
paper/: MARCHING_ORDERS.md  REVIEW_R1.md  abstract_sosp_draft.md  outline.md  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
results/: PLAN.md
scripts/: generate_gemini_tests.sh  mock_gemini_upstream.py  run-prd-benchmark.sh  test_loopback.sh
src/tinkuy/: __init__.py  __main__.py  adapter.py  events.py  gateway.py  harness.py  orchestrator.py  pressure.py  proxy.py  regions.py  server.py  store.py  stream.py  stream_sim.py
src/tinkuy/chat/: __init__.py  __main__.py  session.py
src/tinkuy/core/: __init__.py  adapter.py  events.py  orchestrator.py  pressure.py  regions.py  store.py
src/tinkuy/eval/: __init__.py  (+3 more)
tests/: test_adapter.py  test_events.py  test_gateway.py  test_gemini_format.py  test_harness.py  test_message_suffix.py  test_orchestrator.py  test_pressure.py  test_projection_first.py  test_projection_first_independent.py  test_regions.py  test_server.py  test_store.py  test_system_blocks.py  test_telemetry_persistence.py  test_tensor_protocol.py  test_tool_repair.py
tests/specs/: gateway_cache_regression.md
(+14 files in other folders)
