[project]
name = "tinkuy"
version = "0.1.0"
description = "Projective gateway for transformer memory hierarchy"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
serve = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
